fixing alignment bug

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -856,7 +856,7 @@
 
 	#top {
 		padding: 10em 0 10em 0;
-		text-align: left;
+		text-align: center;
 
 		.image {
 			border-radius: 100%;
